<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bg">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/home_black"
                android:padding="10dp">


                <TextView
                    android:id="@+id/txt_latest_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_latest"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/txt_latest_home_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_latest_home"
                    android:layout_marginTop="5dp"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/btn_latest"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="3dp"
                    android:background="@drawable/rounded_button_yellow"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/more"
                    android:textColor="@color/white" />
            </RelativeLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_latest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/home_black"
                android:padding="10dp">


                <TextView
                    android:id="@+id/txt_featured_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/featured"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/txt_featured_home_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_featured_home"
                    android:layout_marginTop="5dp"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/btn_featured"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="3dp"
                    android:background="@drawable/rounded_button_yellow"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@string/more"
                    android:textColor="@color/white" />
            </RelativeLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_featured"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp" />

        </LinearLayout>
    </ScrollView>


</RelativeLayout>